# cpp-py-c-template

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  copier.yml  justfile  main.cpp  main.py  pyproject.toml
.github/: AGENTS.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  wheels.yml
bindings/: AGENTS.md  bindings.toml
c_lib/: AGENTS.md  c_lib.c  c_lib.h
cmake/: MyProjectConfig.cmake.in
cpp_wrapper/: AGENTS.md  cpp_wrapper.cpp  cpp_wrapper.h
docs/: abi-policy.md  agent-playbook.md  file-map.md  python-bindings.md
src/my_c_wrapper/: AGENTS.md  __init__.py  _environment.py  _loader.py  wrapper.py
tests/: AGENTS.md
tests/c/: test_c_api.c
tests/cmake/: run_consumer_test.cmake.in
tests/consumer/: CMakeLists.txt  main.cpp
tests/cpp/: test_cpp_wrapper.cpp
tests/python/: test_wrapper.py
tools/: AGENTS.md  check_environment_policy.py  customize_template.py  template_smoke.py
tools/bindings/: common.py  extract_api.py  generate_abi.py  generate_ctypes.py  package_smoke.py  validate_abi.py
tools/native_build_backend/: __init__.py  backend.py
