[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_c_wrapper"
version = "0.1.0"
description = "A minimal example of a Python wrapper over a C library."
readme = "README.md"
authors = [
  { name="Your Name", email="your@email.com" },
]
license = { text="MIT" }

[tool.setuptools]
# This flag is the key. It tells setuptools to use MANIFEST.in.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
